k8s/backend-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: backend-server
  template:
    metadata:
      labels:
        component: backend-server
    spec:
      containers:
        - name: backend-server-deployment
          image: kengonline/multi-container-backend-server
          ports:
            - containerPort: 8080
